# rust-openai

./: Cargo.toml  docker-compose.yml
src/: auth.rs  kafka_consumer.rs  kafka_producer.rs  main.rs
