[package]
name = "rust-openai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.12"
actix-rt = "2.5.0"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.3.0", features = ["serde"] }
serde_derive = "1.0.159"
