[package]
name = "rust-openai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
jsonwebtoken = "7.0"
rdkafka = { version = "0.26", features = ["tokio"] }
tokio = { version = "1.0", features = ["full"] }